amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.1.1:
  ADD: Menubar (optional).
  FIX: GStreamer-engine now resumes playback at correct position.
  ADD: iCandy for Context-Browser: Background gradient and toolbar.
  CHG: Collection-Browser now has a toolbar instead of menubar.
  FIX: With "Title Streaming" disabled GStreamer could not play streams.
  FIX: Osssink is now the default sink for GStreamer. If sink initialization
       fails, a dialog will ask to select another sink.
  FIX: Pausing failed on some systems with GStreamer-engine. (BR 90417)
  FIX: Never scan the same directory twice.
  FIX: Disable CD-burning menu for streams. (BR 90336)
  ADD: Open Cover-Manager from Context-Browser popup-menu and main menu.
  FIX: Made amaroK build with --disable-amazon flag.
  FIX: Docs translations were not installed correctly. (BR 90307)
  FIX: GStreamer-engine refused to play some mp3 files. (BR 90317)

VERSION 1.1:
  FIX: Huge speedup for Context-Browser, makes changing tracks faster.
  ADD: Progress display for Cover-Manager.
  CHG: Systray animation is now optional.
  CHG: Updated included sqlite to 3.0.7 (stable).
  ADD: Tag editor can operate on multiple files (mass tagging).
  FIX: Collection encoding broken for non-latin1 characters. (BR 89747)
  ADD: Popup-menu for cover images in Context-Browser.
  FIX: The first track to play is now random for random-mode. (BR 77055)
  FIX: Show systray on startup. (BR 89661)
  FIX: Let xine recognise tracks that have non lower-case extensions.

VERSION 1.1-beta2:
  ADD: K3B integration for burning CDs. (BR 88052)
  ADD: Third category for Collection-Browser. (BR 83609)
  ADD: Playlist search now supports categories. (BR 86296)
  ADD: Support for MAS (Media Application Server). MAS-engine
       is in experimental state.
  ADD: Context-Browser shows information about radio streams.
  ADD: Custom Smart Playlists with built-in editor.
  ADD: Systray icon shows track progress and play status.